# Apify-Yandex-Search-Scraper

./: README.md  README.ru.md  pyproject.toml  yandex-scraper.py
